--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
     rel="stylesheet">
 
   <script src="https://unpkg.com/lucide@latest"></script>
-
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link rel="stylesheet" href="./css/styles.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/dist/lenis.css">
 </head>
@@ -31,7 +32,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-
+<script src="https://unpkg.com/split-type"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
