--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Intell-Corex | AI-ассистенты и разработка ботов</title>
-  <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
+<link rel="icon" type="image/svg+xml"
+  href="data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='32' height='32' rx='8' fill='url(%23paint0_linear)'/%3E%3Cpath d='M10 10H14V22H10V10Z' fill='white'/%3E%3Cpath d='M18 10L22 10V22L18 22V10Z' fill='white' fill-opacity='0.6'/%3E%3Ccircle cx='16' cy='16' r='3' fill='%2300F2FF'/%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear' x1='0' y1='0' x2='32' y2='32' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%2300F2FF'/%3E%3Cstop offset='1' stop-color='%237000FF'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
